# causeway

./: -d  .env  .gitignore  .mock_chunks.json  OVERALL SYSTEM INSTRUCTION FILE.md  README.md  REMEDIATION_PLAN.md  TRUNCATION_AUDIT.md  audit.md  causeway_codebase_audit.md  docker-compose.yml  lowlevel-systemdoc.md  pyproject.toml  systemdoc.md  world_model_export_biz.json
diagnostic_output/: telemetry_m1_b533486f443c.json
docker/: docker-compose.yml
prototype/: app.py
prototype/pages/: 1_📊_System_Status.py  2_📁_Document_Upload.py  3_🔍_Document_Indexing.py  4_🌐_World_Model_Builder.py  5_🤔_Decision_Support.py  6_🗺️_Model_Explorer.py  7_📈_Training_Dashboard.py
src/: __init__.py  config.py
src/agent/: __init__.py  causeway_agent.py  context_manager.py  llm_client.py  orchestrator.py
src/api/: __init__.py  main.py  routes.py
src/causal/: __init__.py  bridge_engine.py  conflict_resolver.py  dag_engine.py  path_finder.py  pywhyllm_bridge.py  service.py  temporal.py
src/extraction/: __init__.py  extractor.py  service.py
src/haystack_svc/: __init__.py  pipeline.py  service.py
src/models/: __init__.py  audit.py  causal.py  decision.py  documents.py  enums.py  evidence.py
src/modes/: __init__.py  mode1.py  mode2.py
src/pageindex/: __init__.py  client.py  pageindex_tools.py  service.py
src/protocol/: __init__.py  mode_router.py  state_machine.py
src/retrieval/: __init__.py  router.py
src/storage/: __init__.py  database.py  object_store.py  (+1 more)
tests/: run_e2e_hobby_farm.py  test_api_training.py  test_causal_agent.py  test_causeway_agent.py  test_e2e_hobby_farm.py  test_models.py  test_modes.py  test_phase2_retrieval.py  test_phase3_conflicts.py  test_phase4_temporal.py  test_protocol.py  test_pywhyllm_bridge.py  test_retrieval.py  test_storage.py  test_world_model_update.py
(+12 files in other folders)
